--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,13 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.4.*",
         "laravelcollective/html": "5.4.*@dev",
-        "yajra/laravel-datatables-oracle": "~6.0",
+        "yajra/laravel-datatables-oracle": "~8.0",
         "guzzlehttp/guzzle": "^6.2",
         "pusher/pusher-php-server": "^2.3",
         "zizaco/entrust": "1.7.*",
         "laravel/tinker": "^1.0",
-        "laravel/dusk": "^1.0"
+        "laravel/dusk": "^1.0",
+        "phpoffice/phpexcel": "1.8.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
